--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "main": "index.js",
   "repository": "https://github.com/Italo-J-A-Fernandes/frontend-developer-coding-test-2020-3.git",
   "author": "Italo Fernandes <italojafernandes@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/cli": "^7.12.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "webpack": "^5.5.1",
+    "webpack-cli": "^4.2.0"
+  }
 }
