--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/Italo-J-A-Fernandes/frontend-developer-coding-test-2020-3.git",
   "author": "Italo Fernandes <italojafernandes@hotmail.com>",
   "license": "MIT",
-  "scripts": { 
-    "start": "webpack serve --mode development --hot", 
-    "build": "webpack --mode production" 
+  "scripts": {
+    "start": "webpack serve --mode development --hot",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/cli": "^7.12.1",
@@ -21,8 +21,23 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4",
+    "file-loader": "^6.2.0",
+    "prettier": "^2.1.2",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "^5.5.1",
