--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
