--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
     "@types/axios": "^0.14.0",
+    "@types/graphql": "^14.5.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
@@ -34,6 +35,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
+    "dotenv-webpack": "^5.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
