initial config apollo

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.7",
     "@babel/cli": "^7.12.1",
     "axios": "^0.21.0",
+    "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
