--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-rater": "^5.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   },
