--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-rater": "^5.1.1",
-    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
+    "react-stars": "^2.2.5",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -33,6 +32,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-stars": "^2.2.0",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
