--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-stars": "^2.2.5",
     "styled-components": "^5.2.1"
