--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.2.7",
     "@babel/cli": "^7.12.1",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
