--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-stars": "^2.2.5",
