--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.11.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-stars": "^2.2.5",
