--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
-    "react-modal": "^3.11.2",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-stars": "^2.2.5",
     "styled-components": "^5.2.1"
@@ -36,6 +36,7 @@
     "@types/graphql": "^14.5.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-stars": "^2.2.0",
     "@types/styled-components": "^5.1.4",
